--- a/TestClient/AndroidManifest.xml
+++ b/TestClient/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.ztemt.test.client.MainActivity"
+            android:name="com.ztemt.test.client.DevicesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="com.ztemt.test.client.ConnectionService" >
+        </service>
     </application>
 
 </manifest>
